Prevent white bar under header (mobile) and menu items wrap (desktop)

--- a/app/assets/sass/explore.scss
+++ b/app/assets/sass/explore.scss
@@ -40,6 +40,9 @@ $menu-hover-colour: #005ff8;
 //  padding-left: 10px;
 //  padding-right: 10px;
   border-bottom: 0;
+  &__logo {
+    margin-bottom: 0;
+  }
   &__menu-button {
     right: 40px;
     top: 0;
@@ -685,7 +688,7 @@ li.govuk-tabs__list-item {
       position: absolute;
     }
     &__navigation-item {
-      padding: 23px 35px 0 20px;
+      padding: 23px 30px 0 20px;
       margin-right: 0;
       cursor: pointer;
 
